--- a/区块链/6.可升级合约.md
+++ b/区块链/6.可升级合约.md
@@ -5,6 +5,100 @@
 
 [合约升级](https://www.bilibili.com/video/BV12AxFewEXv/?spm_id_from=333.1387.homepage.video_card.click&vd_source=f6aabf9cca3c870729f9c09438330bbe)
 
+> 透明代理
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
