--- a/架构/系统架构设计50个核心概念及规范.md
+++ b/架构/系统架构设计50个核心概念及规范.md
@@ -381,27 +381,106 @@
 > >
 > > 在现代云系统中，对于高吞吐量路径，通常会避免使用 2PC，而是采用 SAGA 等模式来代替
 
+### 五、缓存和消息传递
+> 1、缓存
+>> 缓存将频繁访问的数据存储在快速存储层（通常是内存）中，以减少延迟和后端负载
+> >
+> > 常见的缓存层包括进程内缓存、外部键值存储和内容分发网络 (CDN)。缓存对于读取密集型工作负载和高成本计算尤其有效
+> >
+> > 这里有个棘手的问题。过时的数据和失效机制使得缓存比乍看起来要难得多
+> >
 
+> 2、缓存策略（旁路缓存、通写缓存等）
+> >
+> > 旁路缓存（Cache aside）：应用程序直接从缓存读取数据，未命中时则从数据库加载并写入缓存
+> >
+> > 通写缓存（Write through）：同步写入缓存与数据库，确保缓存与数据源始终保持一致
+> >
+> > 回写缓存（Write back）：优先写入缓存，后续再回刷至数据库。这种方式速度快，但若缓存失效则存在数据丢失风险
+> >
 
+> 3、缓存驱逐策略（LRU、LFU）
+> > 缓存驱逐策略决定了当缓存已满时要删除哪些项目
+> >
+> > LRU （最近最少使用）算法会移除最近未访问过的项目，因为该算法假设最近访问过的项目更有可能再次被使用
+> >
+> > LFU （最不常用）会移除很少被访问的物品，重点关注长期受欢迎程度
+> >
+> > 有些系统使用随机算法、先进先出算法或高级算法
+> >
+> > 关键在于缓存空间有限，因此要将最有价值的项目保存在内存中
 
+> 4、消息队列（点对点）
+> > 消息队列允许一个组件向另一个组件发送消息，而无需两者同时在线
+> >
+![image_318](../image_318.png)
 
+>> 在点对点模型中，队列中的消息由一个接收器消费后即被移除。这使得发送方和接收器解耦，从而使它们能够独立扩展和应对故障
+> >
+> > 队列非常适合后台作业、电子邮件发送和异步处理繁重任务
+> >
 
+> 5、发布订阅（PubSub）
+>> 在pub sub 中，发布者向主题发送消息，而不是直接向消费者发送消息
+> >
+> > 订阅者可以收听自己感兴趣的话题，并接收相关信息。这实现了广播式的沟通方式，并降低了生产者和消费者之间的联系
+> >
+> > 多个服务可以对同一事件做出不同的反应，例如日志记录、分析和通知
+> >
+> > 在访谈中，pub sub 经常出现在事件驱动型设计中，例如活动信息流或事件来源
 
+> 6、死信队列
+>>
+> > 死信队列用于存储多次尝试后仍无法成功处理的消息
+> >
+> > 这些消息不会被无限重试并阻塞主队列，而是会被移到一边
+> >
+> > 工程师可以检查死信队列来调试问题、修复数据或稍后重放消息。这种模式提高了系统的弹性，并防止系统因“毒信”而陷入困境
+> >
 
+### 六、可观测性和安全性
+> 1、分布式追踪
+>> 分布式追踪会跟踪单个请求在多个服务间的流转过程。每个服务都会添加一个追踪 ID 和跨度信息，以便您可以重构请求的完整路径。这在调试微服务架构中的响应缓慢或故障时非常有用
+> >
+> > 如果没有追踪功能，你只能看到孤立的错误。有了追踪功能，你就能看到服务、队列和数据库中的完整情况
+> >
 
+> 2、SLA vs SLO vs SLI
+>> 服务级别协议 (SLA )是对客户的外部承诺，例如“每月 99.9% 的正常运行时间”
+> >
+> > 服务级别目标 (SLO )是工程师力求达到的内部目标，通常比服务级别协议 (SLA) 更为严格
+> >
+> > 服务级别指标 ( SLI ) 则是实际测量的指标，例如实际正常运行时间或请求成功率
+> >
+> > 可以将 SLA 看作合同，SLO 看作目标，SLI 看作记分牌
 
+![image_319](../image_319.png)
 
+> 3、OAuth 2.0 和 OIDC
+> >
+> > OAuth 2.0是一个委托授权框架。它允许用户在不共享密码的情况下，授予应用程序对其资源的有限访问权限
+> >
+> > OIDC （OpenID Connect）基于 OAuth 2.0 构建，增加了身份验证功能，允许客户端验证用户身份并获取用户身份信息。这是许多“使用 X 登录”流程的基础
+> >
+> > 其核心思想是授权服务器颁发客户端和 API 可以信任的令牌
 
+> 4、TLS/SSL握手
+>>
+> > TLS/SSL通过加密传输中的数据来保护客户端和服务器之间的通信
+> >
+> > 在握手过程中，客户端和服务器协商加密算法，安全地交换密钥，并验证证书
+> >
+> > 握手完成后，所有后续数据都会被加密，防止被窃听。这就是为什么你的浏览器中会出现小锁图标的原因
+> >
+> > 如果没有 TLS，网络上的任何人都可以读取或修改敏感流量
 
-
-
-
-
-
-
-
-
-
+> 5、零信任安全
+>>
+> > 零信任是一种安全模型，其核心思想是：“永远不要相信，一定要核实。”它假设威胁可能存在于网络外部，也可能存在于网络内部
+> >
+> > 即使请求来自您的数据中心或 VPC 内部，也必须经过身份验证、授权和加密。访问权限的授予基于身份、设备状态和上下文，而不仅仅是“位于防火墙内部
+> >
+> > 在现代架构中，零信任正成为安全系统设计的默认方法
 
 
 
